<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/description"
            android:src="@drawable/copyright" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/weixin"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_green"
        android:gravity="center"
        android:onClick="login"
        android:paddingLeft="130dp"
        android:paddingRight="130dp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/welcome_lable1"
        android:textColor="#444"
        android:textSize="14sp" />

    <Button
        android:id="@+id/main_regist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style_white"
        android:gravity="center"
        android:onClick="register"
        android:paddingLeft="130dp"
        android:paddingRight="130dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/welcome_lable2"
        android:textColor="#444"
        android:textSize="14sp" />

</LinearLayout>