<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_layout2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/exit_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/exit_prompt"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/exitBtn0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_special"
        android:gravity="center"
        android:onClick="exitbutton0"
        android:text="@string/exit_submit"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/exitBtn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_cancel"
        android:gravity="center"
        android:onClick="exitbutton1"
        android:text="@string/exit_cancel"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>